--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="groupThree.js"></script>
 </head>
 <body>
+    <h1>Hello, Myanmar!!</h1>
       <!-- I am testing. -->
 </body>
 </html>
